--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+data
+debug
+R
+
 # History files
 .Rhistory
 .Rapp.history
@@ -37,4 +41,3 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
-data
